--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -49,6 +49,7 @@
 .header .nav-item a
 {
     text-decoration: none;
+    /* padding: 10px; */
     font-family: verdana;
     font-size: 11px;
     color:  #fdb801;
@@ -57,7 +58,6 @@
 }
 .header .nav-item a:hover {
     padding-bottom: 12px;
-    border-bottom: 3px solid var(--secondary-color);
 }
 
 .hamburger {
