--- a/src/css/about.css
+++ b/src/css/about.css
@@ -2,10 +2,12 @@
 #about 
 {
   font-size: 15px;
+  color: #000;
+  
 }
 
 .aboutus-section {
-    padding: 90px 0;
+    padding: 30px 0;
      }
 .aboutus-title {
     font-size: 30px;
@@ -27,7 +29,7 @@
     width: 54px;
 }
 .aboutus-text {
-    color: #606060;
+   
     font-size: 13px;
     line-height: 22px;
     margin: 0 0 35px;
@@ -47,8 +49,13 @@ a:hover, a:active {
     font-size: 14px;
     font-weight: 700;
     letter-spacing: 0;
+    margin: 10px;
     padding: 7px 20px;
     text-transform: uppercase;
+}
+.feature
+{
+    margin-top:50px;
 }
 .feature .feature-box .iconset {
     background: #fff none repeat scroll 0 0;
@@ -59,8 +66,8 @@ a:hover, a:active {
 .feature .feature-box .iconset::after {
     background: #fdb801 none repeat scroll 0 0;
     content: "";
-    height: 150%;
-    left: 43%;
+    height: 100%;
+    left: 39%;
     position: absolute;
     top: 100%;
     width: 1px;
@@ -88,19 +95,19 @@ a:hover, a:active {
     margin: 0 0 5px;
 }
 .feature .feature-box .feature-content p {
-    color: #606060;
+
     font-size: 13px;
     line-height: 22px;
 }
-.icon {
+.feature .icon {
     color : #f4b841;
-    padding:0px;
-    font-size:80px;
+    padding:15px;
+    font-size:20px;
     border: 1px solid #fdb801;
     border-radius: 100px;
     color: #fdb801;
     font-size: 28px;
-    height: 70px;
+    height: 50px;
     line-height: 0px;
     text-align: center;
     width: 100px;
